--- a/index.html
+++ b/index.html
@@ -1,1 +1,57 @@
-index
+<!DOCTYPE html>
+<html lang="es">
+<head>
+	<meta charset="UTF-8">
+	
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+	<title>Pulga Idea | Encuesta</title>
+	<link href="https://fonts.googleapis.com/css?family=Roboto:300,700&display=swap" rel="stylesheet"> 
+	<link rel="icon" href="assets/favicon.png" type="image/x-icon"/>
+	<link rel="shortcut icon" href="files/assets/favicon.png" type="image/x-icon"/>
+</head>
+<body>
+    <div class="cuerpo">
+        <div class="contenedor">
+			<div class="logo">
+				<figure>
+					<img src="files/assets/logo.png" alt="">
+				</figure>
+			</div>
+
+			<div class="presentacion">
+				<h1>Encuesta de satisfacción</h1>
+				<p>Responde estas 3 preguntas y recibe tu cupón digital de
+					descuento para tu siguiente solicitud de trabajo.</p>
+				<button id="btnEmpezar">Empezar</button>
+			</div>
+	<footer>
+		<div class="contenedor">
+			<div class="columnas">
+				<div class="columna">
+					<div class="logo">
+						<figure>
+							<img src="files/assets/logo blanco.png" alt="">
+						</figure>
+					</div>
+
+				</div>
+				<div class="columna">
+					<div>
+						<a href="https://pulgaidea.com">pulgaidea.com</a>
+						<a href="mailto:gaby@pulgaidea.com">gaby@pulgaidea.com</a>
+						<a href="tel:+59395481068">09 9548 1068</a>
+					</div>
+
+				</div>
+
+			</div>
+
+		</div>
+	</footer>
+
+	<link rel="stylesheet" href="files/css/estilos.css">
+
+    
+</body>
+</html>
