division para dos clientes

--- a/clientes/mutualista_1aVRUTxWvNP/client.html
+++ b/clientes/mutualista_1aVRUTxWvNP/client.html
@@ -29,7 +29,7 @@
 				<div class="formulario">
 					<form action="" id="formulario">
 						<div class="pregunta">
-							<h3>¿Por qué nos eligió?</h3>
+							<h3>1.  ¿Por qué nos eligió?</h3>
 							<div class="opciones">
 								<div class="opcion">
 									<input type="radio" name="porque" id="radioTiempo" value="tiempo">
@@ -46,7 +46,7 @@
 							</div>
 						</div>
 						<div class="pregunta">
-							<h3>Percepción de atención</h3>
+							<h3>2.  Percepción de atención</h3>
 							<div class="opciones">
 								<div class="opcion">
 									<input type="radio" name="percepcion" id="radioMala" value="mala">
@@ -64,9 +64,9 @@
 							</div>
 						</div>
 						<div class="pregunta">
-							<h3>¿En qué podríamos mejorar?</h3>
+							<h3>3.  ¿En qué podríamos mejorar?</h3>
 							<textarea name="" id="" cols="50" rows="5" placeholder="Mensaje..." maxlength="400" id="textMensaje"></textarea>
-							<p>Campo no obligatorio</p>
+							<p>*Campo no obligatorio</p>
 							<input type="submit" value="Enviar" id="btnEnviar">
 						</div>
 					</form>
@@ -76,7 +76,7 @@
 				<div>
 					<h2>Gracias por tu tiempo</h2>
 					<div>
-						<p>Conserva este código para un descuento en tu próximo pedido</p>
+						<p>El código de descuento será enviado a tu correo en el transcurso del día</p>
 						<h5 class="codigo">M013009</h5>
 						<p class="expiracion">Expiración 15 de octubre</p>
 					</div>
